[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/Lobo/lobinho.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/softCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Lobo/Wolf.gd" type="Script" id=6]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.12821, 5.08475 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="CircleShape2D" id=5]
radius = 62.0725

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Wolf" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 6 )

[node name="PlayerDetection@LowPerception@CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.38419e-07 )
scale = Vector2( 1.17, 1.18 )
shape = SubResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 4 )

[node name="PlayerDetection" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 5 )

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 8
collision_mask = 128

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.76837e-07, 0 )
scale = Vector2( 0.65625, 0.625 )
frames = SubResource( 13 )
frame = 4
playing = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HitBox"]
[editable path="SoftCollision"]
[editable path="PlayerDetection"]
[editable path="HurtBox"]
